k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brows3r
  namespace: brows3r
  labels:
    app: brows3r
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: brows3r
